[package]
name = "doxie-control"
version = "0.1.0"
authors = ["Nickolas Fotopoulos <nickolas.fotopoulos@gmail.com>"]
description = "Command-line tool to interact with the Doxie Go wifi document scanner"
edition = "2018"

[[bin]]
name = "doxiectl"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "~2.27.0"
failure = "0.1.5"
json = "0.11.13"
log = "0.4"
reqwest = "0.9.8"
simplelog = "0.5.3"
ssdp = "0.7.0"
url = "1.7.2"
